@@ -17,8 +17,8 @@ import seedu.address.commons.core.index.Index;
 import seedu.address.logic.commands.exceptions.CommandException;
 import seedu.address.model.AddressBook;
 import seedu.address.model.Model;
-import seedu.address.model.person.NameContainsKeywordsPredicate;
 import seedu.address.model.person.Person;
+import seedu.address.model.person.PersonMatchesKeywordsPredicate;
 import seedu.address.testutil.EditPersonDescriptorBuilder;
 
 /**
@@ -114,8 +114,14 @@ public class CommandTestUtil {
         assertTrue(targetIndex.getZeroBased() < model.getFilteredPersonList().size());
 
         Person person = model.getFilteredPersonList().get(targetIndex.getZeroBased());
-        final String[] splitName = person.getName().fullName.split("\\s+");
-        model.updateFilteredPersonList(new NameContainsKeywordsPredicate(Arrays.asList(splitName[0])));
+        final String fullName = person.getName().fullName;
+        model.updateFilteredPersonList(
+                new PersonMatchesKeywordsPredicate(
+                        List.of(), // globalKeywords
+                        Arrays.asList(fullName), // nameKeywords
+                        List.of(), // phoneKeywords
+                        List.of() // emailKeywords
+                ));
 
         assertEquals(1, model.getFilteredPersonList().size());
     }
